[gd_scene load_steps=18 format=2]

[ext_resource path="res://recursos/Players/bunny2_stand.png" type="Texture" id=1]
[ext_resource path="res://Juego/personaje/WhiskySan.gd" type="Script" id=2]
[ext_resource path="res://recursos/Players/bunny2_walk2.png" type="Texture" id=3]
[ext_resource path="res://recursos/Players/bunny2_jump.png" type="Texture" id=4]
[ext_resource path="res://recursos/Players/bunny2_walk1.png" type="Texture" id=5]
[ext_resource path="res://recursos/SoundFx/Jump 12.wav" type="AudioStream" id=6]
[ext_resource path="res://recursos/SoundFx/Respawn.wav" type="AudioStream" id=7]
[ext_resource path="res://recursos/Items/wing_left.png" type="Texture" id=8]
[ext_resource path="res://recursos/Items/wing_right.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Default",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.1986
height = 67.5024

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.4415, 6.91105 )

[sub_resource type="Animation" id=4]
resource_name = "Volar"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 40.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_left2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="WhiskySan" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 0.456165, -0.957106 )
scale = Vector2( 0.5, 0.5 )
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 29
script = ExtResource( 2 )
velocidad = Vector2( 200, 200 )
ace_caida = 2000
fuerza_salto = 3400

[node name="wing_left2" type="Sprite" parent="."]
visible = false
position = Vector2( -25.0209, -96.9359 )
texture = ExtResource( 8 )
offset = Vector2( -38.9791, -16.0641 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 26.3027, -97.9522 )
texture = ExtResource( 9 )
offset = Vector2( 37.6973, -15.0478 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0.438553, -100.843 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0389063, -99.0683 )
frames = SubResource( 1 )
animation = "Default"

[node name="CollisionMolde" type="CollisionShape2D" parent="."]
position = Vector2( 0.338959, -75.3331 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="SaltoAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -4.61345, -537.711 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_bottom = 1200
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1

[node name="CollisionPies" type="CollisionShape2D" parent="."]
position = Vector2( -1.14762, -6.06502 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="RespawnAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="EnfriamientoPupSaltar" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Volar = SubResource( 4 )
anims/aclarar = SubResource( 5 )
anims/default = SubResource( 6 )
anims/entrar_portal = SubResource( 7 )
anims/oscurecer = SubResource( 8 )

[node name="EnfriamientoPupVolar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="EnfriamientoPupSaltar" to="." method="_on_EnfriamientoPup_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPupVolar" to="." method="_on_EnfriamientoPupVolar_timeout"]
